// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceAdd Button Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn--active mr-2 v-btn v-btn--text theme--light v-size--default primary--text" data-test="add-btn"><span class="v-btn__content">
          Add Device
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`DeviceAdd Dialog Renders the component 1`] = `
<fragment-stub>
  <div><button type="button" class="v-btn--active mr-2 v-btn v-btn--text theme--light v-size--default primary--text" data-test="add-btn"><span class="v-btn__content">
          Add Device
        </span></button></div><span class="v-tooltip v-tooltip--bottom"><!----></span>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;
